--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,19 +1,31 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
+  "main": "./index.ts",
+  "types": "./index.ts",
   "exports": {
-    "./counter": "./components/counter.ts",
-    "./header": "./components/header.ts",
-    "./setup-counter": "./utils/counter.ts"
+    ".": "./index.ts",
+    "./button": "./components/button/index.tsx"
   },
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts\""
+    "lint": "eslint \"**/*.tsx\""
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "eslint": "^8.57.0",
     "typescript": "5.5.4"
+  },
+  "dependencies": {
+    "react-native": "0.74.5",
+    "react-native-web": "^0.19.13"
+  },
+  "peerDependencies": {
+    "react": ">=19.0.0",
+    "tamagui": ">=1.125.19",
+    "@tamagui/config": ">=1.125.19",
+    "@tamagui/core": ">=1.125.19",
+    "@tamagui/get-button-sized": ">=1.125.19"
   }
 }
