--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,13 +19,12 @@
   },
   "dependencies": {
     "react-native": "0.74.5",
-    "react-native-web": "^0.19.13"
-  },
-  "peerDependencies": {
-    "react": ">=19.0.0",
-    "tamagui": ">=1.125.19",
-    "@tamagui/config": ">=1.125.19",
-    "@tamagui/core": ">=1.125.19",
-    "@tamagui/get-button-sized": ">=1.125.19"
+    "react-native-web": "^0.19.13",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tamagui": "^1.125.19",
+    "@tamagui/config": "^1.125.19",
+    "@tamagui/core": "^1.125.19",
+    "@tamagui/get-button-sized": "^1.125.19"
   }
 }
